# pokefood

./: README.md  dev.sh
backend/: .gitignore  pokefood.db  pyproject.toml  readme.md  requirements.txt
backend/app/: main.py
backend/app/api/: auth.py  battles.py  monsters.py  pokefoods.py
backend/app/core/: battle_runtime.py  room_manager.py  security.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/services/: cv_service.py
backend/app/ws/: battle.py
backend/assets/: download_sprites.py
backend/ml/: main.py  moves.json  pokefood.json  pokefood_generator.py  readme.md
backend/ml/app/: main.py
backend/ml/cv/: .gitignore  endpoint.py  label.py  mllm_client.py  model.py  pixelize.py  pyproject.toml  separate.py  vision.py
backend/ml/pokefood/: bruno.json  generate-pokefood.bru  health.bru
backend/models/: __init__.py  auth.py  battle.py  constants.py  image_input.py  pokefood.py  stored_pokefood.py
backend/tests/: test_auth_storage.py  test_backend_interface.py  test_cv_endpoint.py
cv/src/cv/: model.py  vision_api.py
frontend/: index.html  package-lock.json
frontend/src/: App.css  App.jsx  App.tsx  api.js  api.ts  constants.ts  index.css  types.ts
ml/: .gitignore
mobile/: app.json  package-lock.json  package.json
mobile/app/: _layout.tsx
mobile/components/: collection-stats.tsx  icon.tsx  move-button.tsx  pokefood-card.tsx  pokefood-detail.tsx  pokefood-grid.tsx  rarity-badge.tsx  stat-bar.tsx  upload-zone.tsx
mobile/context/: AppContext.tsx
mobile/lib/: api.ts  icons.ts  theme.ts  types.ts
(+20 files in other folders)
