[project]
name = "pokefood-backend"
version = "0.1.0"
description = "Backend interfaces for monster creation and WebSocket battle rooms"
readme = "readme.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi==0.136.1",
  "httpx==0.28.1",
  "uvicorn[standard]==0.46.0",
]

[dependency-groups]
dev = [
  "pytest==9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]

